<resources>
    <string name="SCAN_MODE_BALANCED">Medium energy and reactivity</string>
    <string name="SCAN_MODE_LOW_LATENCY">High energy and reactivity</string>
    <string name="SCAN_MODE_LOW_POWER">Low energy and reactivity</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_code">Access code:</string>
    <string name="access_code_title">Acess request</string>
    <string name="access_granted">Read success</string>
    <string name="access_refused">Read fail</string>
    <string name="action_bar_access_title">My Access</string>
    <string name="action_settings">Preferences</string>
    <string name="activate">Activate</string>
    <string name="add_badge">Add badge</string>
    <string name="add_badge_request_sent">Badge request sent</string>
    <string name="added">"Badge '%s' added"</string>
    <string name="aid_hce">HCE service AID</string>
    <string name="aid_sim">Pack ID Sim Centric Service</string>
    <string name="apdu_service_description">Pack ID</string>
    <string name="app_name">Pack ID</string>
    <string name="app_name_with_developer_mode">Pack ID (Developer mode)</string>
    <string name="app_version">version %s</string>
    <string name="app_version_unknown">unknown version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_data_current_balance_label">Current balance:</string>
    <string name="application_data_last_transaction_type_label">Last transaction:</string>
    <string name="application_data_last_used_date_label">Last use:</string>
    <string name="application_data_reader_free_item">Free drink:</string>
    <string name="application_data_reader_number_label">"Reader's number:"</string>
    <string name="application_data_token_expiration_date_label">Expiration:</string>
    <string name="application_id">Application ID:</string>
    <string name="application_version">Application version:</string>
    <string name="ask_for_nfc_activation">NFC is not activated, would you like to open your NFC settings to activate it?</string>
    <string name="authorize">Authorize</string>
    <string name="badge">Badge</string>
    <string name="badge_balance_label">My balance:</string>
    <string name="badge_deletion_failure">Deletion failure</string>
    <string name="badge_id_example">AABBXXXXXXXXXXCCDD</string>
    <string name="badge_id_label">"Badge id : "</string>
    <string name="badge_installation_failure">Installation error</string>
    <string name="badge_installation_in_progress">Installing</string>
    <string name="badge_label_id">Badge:</string>
    <string name="badge_line_description">"Zone to display Pack ID badge's informations"</string>
    <string name="badge_list">My badges</string>
    <string name="badge_logo">Badge logo</string>
    <string name="badge_logo_description">When the contour becomes orange, the logo becomes a manual badging button. This functionality allows badging from a longuer distance beyond what was defined by the zone</string>
    <string name="badge_result_channel_description">Notification that show the badge result sent by the reader, when a reader successfully read a badge</string>
    <string name="badge_result_channel_name">Pack ID notifaction for badge result</string>
    <string name="badge_terms_of_use">This badge requires to have the screen unlocked</string>
    <string name="badge_validity_limit_label">end:</string>
    <string name="badges">My badges</string>
    <string name="beaconVendorsName">Beacon Manufacturer</string>
    <string name="beaconVendorsUuid">UUID of beacon Manufacturer</string>
    <string name="beacon_configuration">Beacon configuration</string>
    <string name="beacon_detected">Beacon detected</string>
    <string name="beacon_max_detection_distance">Beacon detection distance (cm)</string>
    <string name="beacon_serial_number_summary">Beacon serial number (beacon minor)</string>
    <string name="beacon_summary">Allowing use of beacon (in order to display access code screen when coming close to the gate)</string>
    <string name="beacon_vendor_summary">Beacon Brands</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="ble_permissions">BLE Activation/Permissions</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_line_description">"Indicates that the badge is BLE compatible
Blue: Bluetooth activated normal
Green: Bluetooth activated optimized
Gray: Bluetooth disabled
"</string>
    <string name="bluetooth_line_title">Bluetooth Low Energy activation indicator</string>
    <string name="bluetooth_off">Please activate Bluetooth</string>
    <string name="bluetooth_on">Bluetooth ON : normal use of Pack ID BLE.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_reload_label">Reload</string>
    <string name="business">Business</string>
    <string name="cant_create_default_user">"Can't create default user"</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkkeyguardsecured">Check if lock is activated…</string>
    <string name="cla_not_supported">Broken NFC link</string>
    <string name="clear_logs">Clear logs</string>
    <string name="click_to_badge">Tap to scan your ID</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">0e7d7c1e29b74324987c8f799e32fde8</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete_history">Full history</string>
    <string name="conditions_of_use_not_satisfied">Authentification fail</string>
    <string name="consent_denied">No, Thanks</string>
    <string name="consent_given">I Agree</string>
    <string name="contact_label">Contact</string>
    <string name="contact_value">pack-id.info@orange.com</string>
    <string name="decimal">Decimal :</string>
    <string name="developer_label">Developed by</string>
    <string name="developer_value"><b>Orange Business Service / Digital &amp; Data</b></string>
    <string name="editor_label">Editor</string>
    <string name="editor_value"><b>Orange Business Services</b>" 
with share capital of 482 928 626,88 €
1 place des Droits de l'homme 93210 Saint Denis La Plaine France
RCS Bobigny 345 039 416
Intra-community registration number: FR26345039416"</string>
    <string name="help">Display help</string>
    <string name="hexadecimal">Hexadecimal :</string>
    <string name="info_legal">Legal information</string>
    <string name="last_transactions">My last transactions</string>
    <string name="logo_pack_id">Logo Pack ID</string>
    <string name="my_badge">Pack ID - My Access</string>
    <string name="my_operations">My operations</string>
    <string name="permission_bluetooth_content">If you are using Pack ID badges with Bluetooth Low Energy (BLE). You must authorise the application to use BLE on your device. Badging wil be impossible without the required permissions.</string>
    <string name="qrcode">QR Code</string>
    <string name="services">Services</string>
    <string name="status_active">Active</string>
    <string name="third_party">Third party</string>
    <string name="third_party_value_AndroidDeviceNames"><b>AndroidDeviceNames</b>"
Copyright (C) 2015 Jared Rummler is distributed under the terms of the Apache 2.0 license
Learn more https://github.com/jaredrummler/AndroidDeviceNames"</string>
    <string name="third_party_value_Glide"><b>Glide</b>"
Copyright 2014 Google Copyright 2012 Jake Wharton Copyright 2011 The Android Open Source Project is distributed under the terms of the Apache 2.0 license
Learn more https://github.com/bumptech/glide"</string>
    <string name="third_party_value_Zxing"><b>Zxing</b>"
Copyright 2008 zxing.org is distributed under the terms of the Apache 2.0 license Learn more https://github.com/zxing/zxing"</string>
    <string name="token_not_initialized">To initialize your badge, present your device to a reader</string>
    <string name="zone_detection_notification">Zone notification:</string>
</resources>