<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView android:id="@id/version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:cardBackgroundColor="@color/white">
                <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/orange_brand" android:id="@id/app_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
                    <TextView android:textColor="@color/black" android:id="@id/app_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_version" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:cardBackgroundColor="@color/white">
                <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/orange_brand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_label" />
                    <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_value" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:cardBackgroundColor="@color/white">
                <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/orange_brand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_label" />
                    <TextView android:textColor="@color/black" android:autoLink="email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/contact_value" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:cardBackgroundColor="@color/white">
                <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/orange_brand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/developer_label" />
                    <TextView android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/developer_value" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" app:cardBackgroundColor="@color/white">
                <LinearLayout android:orientation="vertical" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/orange_brand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/third_party" />
                    <TextView android:textColor="@color/black" android:autoLink="web" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/third_party_value_AndroidDeviceNames" />
                    <TextView android:textColor="@color/black" android:autoLink="web" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/third_party_value_Glide" />
                    <TextView android:textColor="@color/black" android:autoLink="web" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/third_party_value_Zxing" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>