<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:gravity="center" android:id="@id/badgeNameContainer" android:background="@color/orange_brand" android:layout_width="fill_parent" android:layout_height="60.0dip">
        <ImageView android:id="@id/badgeLogo" android:layout_width="54.0dip" android:layout_height="54.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:src="@null" android:scaleType="fitCenter" android:layout_alignParentTop="true" android:layout_marginEnd="10.0dip" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_badgeName" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_badge" android:layout_centerVertical="true" android:layout_toEndOf="@id/badgeLogo" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp" android:textColor="@color/active" android:id="@id/tv_badgeStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/status_active" android:layout_below="@id/badgeNameContainer" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_badge_id_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/badge_label_id" android:layout_below="@id/tv_badgeStatus" android:layout_centerHorizontal="true" />
    <LinearLayout android:id="@id/ll_badge_id_hexa_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/tv_badge_id_label">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/badge_hexadecimal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hexadecimal" />
        <TextView android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/tv_badge_id_hexa" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-light" android:layout_marginStart="8.0dip" />
    </LinearLayout>
    <LinearLayout android:id="@id/ll_badge_id_decimal_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/ll_badge_id_hexa_container">
        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/badge_decimal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/decimal" />
        <TextView android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/tv_badge_id_decimal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-light" android:layout_marginStart="8.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/ll_notif_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/ll_badge_id_decimal_container">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_notif_id_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zone_detection_notification" />
        <Switch android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/switch_notif" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-light" android:layout_marginStart="8.0dip" />
    </LinearLayout>
    <ScrollView android:id="@id/sw_history" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/ll_badge_id_hexa_container">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="22.0sp" android:textColor="@android:color/black" android:id="@id/tv_history" android:background="@color/light_orange" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/my_operations" android:fontFamily="sans-serif-light" />
            <LinearLayout android:orientation="vertical" android:id="@id/ll_history" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="center_horizontal" android:id="@id/ll_desc_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/ll_notif_container">
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/default_badge_detail" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/apdu_service_description" />
    </LinearLayout>
</RelativeLayout>