<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:scrollbarThumbVertical="@color/orange_brand" android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/content" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/permission_bluetooth_content" android:lineSpacingExtra="8.0sp" android:fontFamily="sans-serif-light" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:weightSum="2.0" app:layout_constraintBottom_toTopOf="@id/view" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:textSize="20.0sp" android:textColor="@color/black" android:id="@id/deny_button" android:background="#00ffffff" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/consent_denied" android:layout_weight="1.0" android:fontFamily="sans-serif-light" android:layout_marginEnd="10.0dip" />
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/orange_brand" android:id="@id/agree_button" android:background="#00ffffff" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/consent_given" android:layout_weight="1.0" android:fontFamily="sans-serif-light" android:layout_marginStart="10.0dip" />
    </LinearLayout>
    <View android:id="@id/view" android:layout_width="fill_parent" android:layout_height="50.0dip" app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>